[tool]
[tool.poetry]
name = "notion2md"
version = "2.9.0"
description = "Notion Markdown Exporter with Python Cli"
license = "MIT"
classifiers = ["License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3.9"]
homepage = "https://github.com/echo724/notion2md.git"
authors = ["echo724 <eunchan1001@gmail.com>"]
readme = "README.md"
exclude = ["Test/test_*"]

[tool.poetry.dependencies]
python = ">=3.7, <4"
notion-client = ">=1.0.0"
cleo = ">=1.0.0a4"

[tool.poetry.scripts]
notion2md = 'notion2md.console.application:main'

[tool.poetry.dev-dependencies]
python-semantic-release = ">=7.23.0"
pre-commit = ">=2.17.0"
isort = ">=5.10.1"
black = ">=22.1.0"
flake8 = ">=4.0.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["notion2md", "tests"]
filter_files = true
known_first_party = "notion2md"

[tool.black]
line-length = 79

[tool.semantic_release]
version_variable = [
    "notion2md/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "poetry build"
